# voice-reach

./: .gitignore  AGENTS.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.harmony/: config.json
backend/: pyproject.toml
backend/src/voicereach/: __init__.py  config.py  main.py
backend/src/voicereach/api/: health.py  ws.py
backend/src/voicereach/engine/: pipeline.py
backend/src/voicereach/engine/gaze/: calibration.py  gaze_estimator.py  mediapipe_tracker.py  smoother.py  zone_mapper.py
backend/src/voicereach/engine/input/: blink_adapter.py  ial.py  keyboard_adapter.py
backend/src/voicereach/engine/llm/: candidate.py  cloud_client.py  local_client.py  orchestrator.py  prompt_builder.py
backend/src/voicereach/engine/tts/: audio_postprocess.py  cosyvoice.py  router.py
backend/src/voicereach/models/: __init__.py  caregiver.py  context.py  events.py
backend/src/voicereach/tools/: env_check.py
backend/src/voicereach/tools/benchmark/: __init__.py  cli.py  gaze_bench.py  llm_bench.py  pipeline_bench.py  tts_bench.py
backend/tests/: conftest.py
backend/tests/test_e2e/: conftest.py  test_gaze_pipeline.py  test_health.py  test_llm_pipeline.py  test_pipeline_e2e.py  test_pipeline_integration.py  test_websocket.py  test_ws_caregiver.py  test_ws_patient.py
backend/tests/test_engine/: test_gaze.py  test_gaze_estimator.py  test_input.py  test_llm.py  test_pipeline.py  test_tts.py
backend/tests/test_models/: test_context.py  test_events.py
backend/tests/test_tools/: test_benchmark.py  test_env_check.py  test_recording.py
(+83 files in other folders)
