[project]
name = "voicereach"
version = "0.1.0"
description = "AAC communication platform for ALS patients"
requires-python = ">=3.11"
license = { text = "MIT" }

[tool.uv.workspace]
members = ["backend"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
asyncio_mode = "auto"
